# oncobot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  _index.py  chain.py  chat_templates.py  check_fastapi.py  config.py  config.toml.example  custom_chat_model.py  docker-compose.yml  expect.exp  expect.py  ingest.py  llm_pipeline.py  llm_with_streaming.py  llm_without_streaming.py  local_embeddings.py  logger_config.py  main.py  ner.py  pyproject.toml  rag_chain.py  retriever.py  talking_face.py  test.py  transcription.py  tts.py  vectorstore.py
chain/: prompts.py  retriever_chain.py
chat-langchain/: Dockerfile  Dockerfile.railway  Makefile  package.json
chat-langchain/app/: App.tsx  layout.tsx  page.tsx
chat-langchain/app/api/bots/: route.ts
chat-langchain/app/components/: ChatMessageBubble.tsx  ChatWindow.tsx  EmptyState.tsx  Footer.tsx  Header.tsx  InlineCitation.tsx  SourceBubble.tsx  test.mjs
faiss_index/: index.faiss.REMOVED.git-id
index/langchain_index/: index.pkl.REMOVED.git-id
llm/: llm_pipeline.py  llm_with_streaming.py
llm/llm_llama/: Dockerfile  README
llm/llm_llama/model_generator/: llm_generator.py  llm_pipeline.py  requirement.txt
llm/model_generator/: llm_pipeline.py  stopping_criteria.py
sad_talker/: __init__.py
sad_talker/src/: generate_batch.py  generate_facerender_batch.py  gradio_demo.py  sad_talker.py  test_audio2coeff.py
sad_talker/src/audio2exp_models/: audio2exp.py
sad_talker/src/audio2pose_models/: audio2pose.py  cvae.py
sad_talker/src/face3d/: visualize.py
sad_talker/src/face3d/models/: bfm.py  facerecon_model.py
sad_talker/src/face3d/util/: __init__.py
sad_talker/src/facerender/: animate.py
sad_talker/src/facerender/modules/: dense_motion.py  generator.py  keypoint_detector.py  make_animation.py  util.py
sad_talker/src/utils/: audio.py  croper.py  face_enhancer.py  init_path.py  model2safetensor.py  paste_pic.py  preprocess.py
src/: __init__.py  main.py
src/oncobot/: custom_chat_model.py  ner.py  rag_chain.py  retriever.py  talking_face.py  transcription.py  tts.py
src/oncobot/scripts/: index.py
src/sad_talker/: __init__.py
src/sad_talker/src/: app_sadtalker.py  generate_batch.py  generate_facerender_batch.py  sad_talker.py  sadtalker.py
src/sad_talker/src/audio2pose_models/: res_unet.py
src/sad_talker/src/face3d/: extract_kp_videos_safe.py
src/sad_talker/src/facerender/: animate.py
src/sad_talker/src/utils/: croper.py  cropper.py  init_path.py  model2safetensor.py  preprocess.py  videoio.py
src/sadtalker/: __init__.py
src/sadtalker/scripts/: download_models.sh
src/sadtalker/src/: app_sadtalker.py  generate_batch.py  generate_facerender_batch.py  sadtalker.py  test_audio2coeff.py
src/sadtalker/src/audio2pose_models/: audio2pose.py  cvae.py  res_unet.py
src/sadtalker/src/face3d/: extract_kp_videos_safe.py
src/sadtalker/src/facerender/: __init__.py  animate.py  app.py  custom_animate.py
src/sadtalker/src/utils/: audio.py  cropper.py  init_path.py  paste_pic.py  preprocess.py  videoio.py
src/utils/: env_config.py  logger_config.py
test/: chat_template.j2  test_async.py  test_chain.py  test_ddp.py  test_ddp_with_sadtalker.py  test_retriever.py  test_talker.py  test_tts.py
test/hf/: test_chat_template.py  test_hf.py
test/oncobot/: test_async.py  test_chain.py  test_model.py  test_retriever.py  test_talker.py  test_tts.py
test/sadtalker/: measure_sadtalker_runtime.py  test_ddp.py  test_ddp_with_sadtalker.py  test_sadtalker_with_quanto.py
test/sadtalker/profile/: .gitignore  README.md  log.dvc  profile.ipynb  profile_animate.py  profile_generator.py  profile_kp2gaussian.py  profile_sadtalker.py  test.py  viztracer.dvc  viztracer_profile_sadtalker.py
tests/: a.py  b.py  c.py  call_async.py  custom_langchain.py  test_async.py  test_chain.py  test_chat_template.py  test_ddp.py  test_ddp_with_sadtalker.py  test_hf.py  test_model.py  test_retriever.py  test_sadtalker_with_quanto.py  test_talker.py  test_tts.py
ui/: Dockerfile  Makefile  bun.lockb  package.json
ui/app/: layout.tsx  page.tsx
ui/app/api/bots/: route.ts
ui/app/components/: ChatWindow.tsx  EmptyState.tsx  Footer.tsx  Header.tsx  Logo.tsx
(+16 files in other folders)
