[project]
name = "oncobot"
version = "0.1.0"
requires-python = ">=3.10"
description = "A Self-Hosted Multimodal Chatbot for Enhanced Clinical Oncology Information Retrieval"
readme = "README.md"
authors = [{ name = "Hung Tran", email = "hunglongtran2004@gmail.com" }]
dependencies = [
  "av>=12.1.0",
  "bson>=0.5.10",
  "cutlet>=0.3.0",
  "deepspeed>=0.14.4",
  "face-alignment>=1.4.1",
  "facexlib>=0.3.0",
  "fastapi>=0.103.1",
  "groq>=0.4.2",
  "imageio>=2.34.1",
  "imageio-ffmpeg>=0.5.0",
  "kornia>=0.7.2",
  "langdetect>=1.0.9",
  "loguru>=0.7.2",
  "mecab-python3>=1.0.8",
  "meilisearch>=0.31.1",
  "numba>=0.59.1",
  "openai>=1.10.0",
  "opencv-python>=4.9.0.80",
  "optimum-quanto>=0.2.2",
  "peft>=0.8.2",
  "pydantic>=2.3.0",
  "pydantic-settings>=2.2.1",
  "pydub>=0.25.1",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.1",
  "replicate>=0.25.1",
  "resampy>=0.4.3",
  "scipy>=1.11.3",
  "sentence-transformers>=2.7.0",
  "tiktoken>=0.5.2",
  "torch>=2.1.0",
  "transformers>=4.38.2",
  "trimesh>=4.4.3",
  "TTS>=0.22.0",
  "unidic-lite>=1.0.8",
  "uvicorn>=0.23.2",
  "yacs>=0.1.8",
  "moviepy>=1.0.3",
  "vllm>=0.6.0",
]
[tool.uv]
dev-dependencies = [
  "black>=23.9.1",
  "ipykernel>=6.29.5",
  "isort>=5.12.0",
  "line-profiler>=4.1.3",
  "pytest>=8.3.2",
  "torch-tb-profiler>=0.4.3",
  "viztracer>=0.16.3",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
addopts = ["--import-mode=importlib"]
